# word-cloud

./: .gitignore  pyproject.toml  readme.md  word-cloud.py
